ver si en la bateria cada pokemon tengo tambien que recuperar el ataque, habilidad y cardsRelated